# ikonized

./: .gitignore  CMakeLists.txt  buildme  tarball
debian/: README  changelog  control  copyright  ikonized.install  menu  rules
images/: closewindow_cursor.xcf
skins/: CMakeLists.txt
src/: CMakeLists.txt  globals.h  ikonized.cpp  ikonized.h  ikonized.qrc  main.cpp  mainwindow.cpp  mainwindow.h  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  settings.cpp  settings.h  size.h  sizer.cpp  sizer.h  sizer_defs.h  skinbase.h  skinsimple.cpp  skinsimple.h  skinsvg.cpp  skinsvg.h  windowinfo.cpp  windowinfo.h
